// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AnnotationPopover should correctly render a pending annotation 1`] = `
<Internationalize>
  <Overlay
    className="ba-popover-overlay"
  >
    <AnnotatorLabel
      isPending={true}
    />
    <ActionControls
      canDelete={false}
      isPending={true}
      onCancel={[MockFunction]}
      onCommentClick={[Function]}
      onCreate={[MockFunction]}
      onDelete={[MockFunction]}
    />
  </Overlay>
</Internationalize>
`;

exports[`components/AnnotationPopover should correctly render a popover with comments and reply textarea 1`] = `
<Internationalize>
  <Overlay
    className="ba-popover-overlay"
  >
    <CommentList
      comments={
        Array [
          Object {
            "createdAt": "2017-09-27T10:40:41-07:00",
            "createdBy": Object {
              "email": "princess@genovia.gov",
              "id": "789ghi",
              "name": "Mia Thermopolis",
              "type": "user",
            },
            "id": "123",
            "message": "test",
            "permissions": Object {},
          },
          Object {
            "createdAt": "2017-09-27T10:40:41-07:00",
            "createdBy": Object {
              "email": "princess@genovia.gov",
              "id": "789ghi",
              "name": "Mia Thermopolis",
              "type": "user",
            },
            "id": "456",
            "message": "test",
            "permissions": Object {},
          },
        ]
      }
      onDelete={[MockFunction]}
    />
    <ActionControls
      canDelete={false}
      isPending={false}
      onCancel={[MockFunction]}
      onCommentClick={[Function]}
      onCreate={[MockFunction]}
      onDelete={[MockFunction]}
    />
  </Overlay>
</Internationalize>
`;

exports[`components/AnnotationPopover should correctly render a view-only popover with comments 1`] = `
<Internationalize>
  <Overlay
    className="ba-popover-overlay"
  >
    <CommentList
      comments={
        Array [
          Object {
            "createdAt": "2017-09-27T10:40:41-07:00",
            "createdBy": Object {
              "email": "princess@genovia.gov",
              "id": "789ghi",
              "name": "Mia Thermopolis",
              "type": "user",
            },
            "id": "123",
            "message": "test",
            "permissions": Object {},
          },
          Object {
            "createdAt": "2017-09-27T10:40:41-07:00",
            "createdBy": Object {
              "email": "princess@genovia.gov",
              "id": "789ghi",
              "name": "Mia Thermopolis",
              "type": "user",
            },
            "id": "456",
            "message": "test",
            "permissions": Object {},
          },
        ]
      }
      onDelete={[MockFunction]}
    />
  </Overlay>
</Internationalize>
`;

exports[`components/AnnotationPopover should correctly render an annotation with a annotator label and no comments 1`] = `
<Internationalize>
  <Overlay
    className="ba-popover ba-inline"
  >
    <AnnotatorLabel
      isPending={false}
    />
    <ActionControls
      canDelete={false}
      isPending={false}
      onCancel={[MockFunction]}
      onCommentClick={[Function]}
      onCreate={[MockFunction]}
      onDelete={[MockFunction]}
    />
  </Overlay>
</Internationalize>
`;

exports[`components/AnnotationPopover should render a view-only annotation with a annotator label and no comments 1`] = `
<Internationalize>
  <Overlay
    className="ba-popover ba-inline"
  >
    <AnnotatorLabel
      isPending={false}
    />
  </Overlay>
</Internationalize>
`;
